# Engineering-intelligence-hub-RAG

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
data/eval/: _missing.yaml  baseline_final_full.json  baseline_week3.json  baseline_week4_5_router.json  combined.yaml  generated_1000.yaml  multi_hop.yaml  questions.yaml
data/eval/results/: run_20260615T181530Z.json  run_20260616T010918Z.json  run_20260616T155627Z.json  run_20260617T003952Z.json  run_20260617T010704Z.json  run_20260617T032952Z.json  run_20260619T015841Z.json  run_20260622T044030Z.json  run_20260622T155832Z.json
scripts/: build_project_analysis_pdf.py  capture_screenshots.py
src/eih/: agentic.py  answer.py  bm25.py  chunker.py  cli.py  config.py  github.py  hyde.py  ingest.py  llm.py  rerank.py  router.py  store.py  voyage_rerank.py
src/eih/eval/: generate.py  judge.py  metrics.py  runner.py
