[project]
name = "engineering-intelligence-hub"
version = "0.1.0"
description = "RAG over an engineering codebase (Apache Airflow) with citations."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.40.0",
]

[project.scripts]
eih = "eih.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eih"]
